# Praxistage-2025

./: .continueignore  .continuerules  .gitignore  README.md  pyproject.toml
notebooks/: 0_setup.ipynb  1_llm_basics solution.ipynb  1_llm_basics.ipynb  2_semantic_search solution.ipynb  2_semantic_search.ipynb  3_rag solution.ipynb  3_rag.ipynb  example_config.json  utils.py
notebooks/tei-client-index/: index.faiss  index.pkl
obsidian/: Slides.md
obsidian/.obsidian/plugins/obsidian-advanced-slides/: data.json
obsidian/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
obsidian/Excalidraw/: Adapters.excalidraw.md  Embeddings.excalidraw.md  Final.excalidraw.md  Finetuning.excalidraw.md  In-Context-Learning.excalidraw.md  LLM_Basics.excalidraw.md  LLM_Hallucinations.excalidraw.md  Semantic_basics.excalidraw.md  Tokenizers.md  Tokenizers_prelude.excalidraw.md  coding_assistant_architecture.excalidraw.excalidraw
obsidian/chapters/: 1. Intro.md  2. LLM Basics.md  3. Coding Assistant.md  4. Advanced LLM.md  5. Conclusion.md
