[project]
name = "praxistage_2025"
version = "0.1.0"
description = "Workshop Parxistage 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "gitpython>=3.1.44",
    "gradio>=5.17.0",
    "ipykernel==6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-community>=0.3.17",
    "langchain-ollama==0.2.3",
    "langchain==0.3.18",
    "langgraph>=0.2.73",
    "nbformat>=5.10.4",
    "numpy>=2.2.2",
    "ollama==0.4.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "ruff==0.9.6",
    "scikit-learn>=1.6.1",
    "semantic-text-splitter==0.23.0",
    "tokenizers==0.21.0",
    "unstructured>=0.14.8",
]
